--- a/public/about.html
+++ b/public/about.html
@@ -1,20 +1,31 @@
-<h1>About Me</h1>
-
-<p></p>
-<h2><img src="../assets/images/foto de perfil.png" height="150" alt="It's a Victor's profile picture"></h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About</title>
+  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="icon" href="../favicon.png" type="image/png">
+</head>
+<body>
+  <div id="header"></div>
+<p>
+<h2 style="text-align: center;"><img id="img1" src="../assets/images/foto de perfil.png" height="200" alt="It's a Victor's profile picture"></h2>
+<h1 style="text-align: center;">About Me</h1>
 </p>
 
 <h2>Summary</h2>
 <p>
-Transitioning career into I.T., with a background in Graphic Design (which adds an UI/UX vision) and currently pursuing a degree in
-Computer Science (4th semester). Seeking a Software Development Internship (Front-End or Full Stack) to apply knowledge of Java,
-Python, and Web technologies, and expand experience with practical projects and agile methodologies.
+Hello! My name is Victor Hasse.<br>
+I'm a Brazilian currently transitioning my career into I.T., with a background in Graphic Design that strengthens my UI/UX perspective.<br>
+I’m pursuing a Bachelor’s degree in Computer Science (4th semester) and seeking a Software Development Internship preferably in Front-End or Full Stack,<br>
+where I can apply my knowledge of Java, Python, and web technologies, while gaining hands-on experience with real-world projects and agile methodologies.
 </p>
 
 <h2>Education</h2>
 <p>
-<b>Graphic Design.</b> Universidade do Vale do Itajaí (UNIVALI) 2014 – 2018 | Florianópolis, SC, Brazil<br>
-<b>Computer Science.</b> Universidade do Sul de Santa Catarina (UNISUL) 2024 – <i>in progress</i> | Florianópolis, SC, Brazil
+<b style="color: #6679a4;">Graphic Design.</b> Universidade do Vale do Itajaí (UNIVALI) 2014 – 2018 | Florianópolis, SC, Brazil<br>
+<b style="color: #6679a4;">Computer Science.</b> Universidade do Sul de Santa Catarina (UNISUL) 2024 – <i>in progress</i> | Florianópolis, SC, Brazil
 </p>
 
 <h2>Courses and Certifications</h2>
@@ -30,20 +41,48 @@ Python, and Web technologies, and expand experience with practical projects and 
 <h2>Skills</h2>
 <p>
   <ul>
-    <li><b>Programming Languages:</b> Python, Java, HTML, CSS, JavaScript/Typescript</li>
-    <li><b>Frameworks/Libraries:</b> React, Bootstrap</li>
-    <li><b>Databases:</b> MySQL, SQLite</li>
-    <li><b>Tools:</b> Git, GitHub, VS Code, Pycharm, NetBeans</li>
-    <li><b>Operating Systems:</b> MacOS</li>
-    <li><b>Design:</b> Figma, Adobe CC (Photoshop, Illustrator, Premiere Pro), Procreate (2D Ilustration & Animation).</li>
-    <li><b>Other Skills:</b> Agile Methodologies, UI/UX Design, Problem-Solving, Team Collaboration</li>
+    <li><b style="color: #6679a4;">Programming Languages:</b> Python, Java, HTML, CSS, JavaScript/Typescript</li>
+    <li><b style="color: #6679a4;">Frameworks/Libraries:</b> React, Bootstrap.</li>
+    <li><b style="color: #6679a4;">Databases:</b> MySQL, SQLite.</li>
+    <li><b style="color: #6679a4;">Tools:</b> Git, GitHub, VS Code, Pycharm, NetBeans.</li>
+    <li><b style="color: #6679a4;">Operating Systems:</b> MacOS.</li>
+    <li><b style="color: #6679a4;">Design:</b> Figma, Adobe CC (Photoshop, Illustrator, Premiere Pro), Procreate (2D Ilustration & Animation).</li>
+    <li><b style="color: #6679a4;">Other Skills:</b> Agile Methodologies, UI/UX Design, Problem-Solving, Team Collaboration.</li>
   </ul>
 </p>
 
 <h2>Languages</h2>
 <p>
   <ul>
-    <li><b>Portuguese:</b> Native</li>
-    <li><b>English:</b> Intermediary - CEFR - B2</li>
+    <li><b style="color: #6679a4;">Portuguese:</b> Native</li>
+    <li><b style="color: #6679a4;">English:</b> Intermediary - CEFR - B2</li>
   </ul>
 </p>
+<div id="footer"></div>
+
+    <script>
+  // Carrega o header
+  fetch("../includes/header.html")
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById("header").innerHTML = data;
+
+      // Recarrega o script do tema, se necessário
+      const themeScript = document.createElement("script");
+      themeScript.src = "../assets/js/script.js";
+      document.body.appendChild(themeScript);
+    });
+</script>
+
+<script>
+  // Carrega o footer (se ainda não estiver)
+  fetch("../includes/footer.html")
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById("footer").innerHTML = data;
+      document.getElementById("year").textContent = new Date().getFullYear();
+    });
+</script>
+</body>
+
+</html>
