Fix file paths in header, footer, and index files for consistency

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Victor Hasse's Website</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
@@ -14,7 +14,7 @@
     
     <hr>
     
-    <h2 style="text-align: center;"><img src="./assets/images/hasse_lo-fi.gif" height="500" alt="Victor's Ilustration"></h2>
+    <h2 style="text-align: center;"><img src="assets/images/hasse_lo-fi.gif" height="500" alt="Victor's Ilustration"></h2>
 
     <div id="footer"></div>
 
@@ -27,7 +27,7 @@
 
       // Recarrega o script do tema, se necessário
       const themeScript = document.createElement("script");
-      themeScript.src = "./assets/js/script.js";
+      themeScript.src = "assets/js/script.js";
       document.body.appendChild(themeScript);
     });
 </script>
