Rename footer-socials class to social-media for clarity

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <a href="#design" class="i18n" data-i18n="nav_design">Design Projects</a>
             </nav>
             <p class="i18n" data-i18n="footer_contacts">Contacts:</p>
-            <div class="footer-socials">
+            <div class="social-media">
                 <a href="https://github.com/victorhasse" target="_blank" aria-label="GitHub">
                     <img src="assets/images/github.svg" alt="GitHub" height="48">
                 </a>
