Update email btn

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="https://instagram.com/hassesdrawings" target="_blank" aria-label="Instagram">
                     <img src="assets/images/instagram.svg" alt="Instagram" height="32">
                 </a>
-                <a href="mailto:vhasse22@gmail.com" aria-label="Email">
+                <a href="mailto:victor@victorhasse.com" aria-label="Email">
                     <img src="assets/images/email.svg" alt="Email" height="32">
                 </a>
             </div>
@@ -248,7 +248,7 @@
                 <a href="https://instagram.com/hassesdrawings" target="_blank" aria-label="Instagram">
                     <img src="assets/images/instagram.svg" alt="Instagram" height="48">
                 </a>
-                <a href="mailto:vhasse22@gmail.com" aria-label="Email">
+                <a href="mailto:victor@victorhasse.com" aria-label="Email">
                     <img src="assets/images/email.svg" alt="Email" height="48">
                 </a>
             </div>
